--- a/MessageSemanticsExtraction/pom.xml
+++ b/MessageSemanticsExtraction/pom.xml
@@ -128,7 +128,11 @@
 			<version>4.0.25.Final</version>
 			<scope>compile</scope>
 		</dependency>
-    
+    	<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.47</version>
+		</dependency>
     
   </dependencies>
 
