--- a/MPlearner/example/servermqttjs.properties
+++ b/MPlearner/example/servermqttjs.properties
@@ -5,6 +5,12 @@ host = platforms/mos_v3/dev1.yml
 localport = 9125
 timeout = 60
 
+# platform name traffic-based semantics extraction and the semantics assignment
+platformname = mos
+
+# IoT platform document for NLP-based semantics extraction
+iotdocument = ./alimqtt/alidoc2.html
+
 type = mqtt3mos
 tlsversion = empty
 
